Russian, ukrainian localisations has been added. Readme.md.

--- a/src/com/zhurylomihaylo/www/SystemTrayRdpIp/messages.properties
+++ b/src/com/zhurylomihaylo/www/SystemTrayRdpIp/messages.properties
@@ -1,11 +1,11 @@
-SystemTrayIP.AreYouSureToExit=Are you sure to exit?
-SystemTrayIP.Exit=Exit
-SystemTrayIP.LeftClickMouseToDetermineYourIPAddress=Left-ckick mouse to determine your IP-address
-SystemTrayIP.No=No
-SystemTrayIP.SystemTrayIsNotSupported=System tray is not supported.
-SystemTrayIP.TrayIconCouldNotBeAdded=Traylcon could not be added.
-SystemTrayIP.Ups=Ups...
-SystemTrayIP.Yes=Yes
-SystemTrayRdpIp.AddressIsDefining=Your remote IP-address is currently defining. Try again later.
-SystemTrayRdpIp.UnableToDetermineYourRemoteIpAddress=Unable to determine your remote IP-address.
-SystemTrayRdpIp.YourRemoteIpAddress=Your remote IP-address:
+Ups=Ups
+SystemTrayIsNotSupported=System tray is not supported.
+Exit=Exit
+Yes=Yes
+No=No
+AreYouSureToExit=Are you sure to exit?
+LeftClickMouseToDetermineYourIpAddress=Left-click mouse to determine your IP-address.
+TrayIconCouldNotBeAdded=Tray icon could not be added.
+YourRemoteIpAddressIsDefiningNowTryAgainLater=Your remote IP-address is defining now. Try again later.
+FailedToDetermineYourRemoteIpAddress=Failed to determine your remote IP-address.
+YourRemoteIpAddress=Your remote IP-address
