--- a/src/com/zhurylomihaylo/www/SystemTrayRdpIp/messages_ruorig.properties
+++ b/src/com/zhurylomihaylo/www/SystemTrayRdpIp/messages_ruorig.properties
@@ -1,11 +1,11 @@
-SystemTrayIP.AreYouSureToExit=Вы действительно хотите выйти?
-SystemTrayIP.Exit=Выход
-SystemTrayIP.LeftClickMouseToDetermineYourIPAddress=Нажмите левой кнопкой мыши для определения Вашего IP-адреса
-SystemTrayIP.No=Нет
-SystemTrayIP.SystemTrayIsNotSupported=Системная область не поддерживается.
-SystemTrayIP.TrayIconCouldNotBeAdded=Значок не может быть добавлен в системную область.
-SystemTrayIP.Ups=Ой...
-SystemTrayIP.Yes=Да
-SystemTrayRdpIp.AddressIsDefining=Ваш IP-адрес для удаленного подключения сейчас определяется. Попробуйте снова позже.
-SystemTrayRdpIp.UnableToDetermineYourRemoteIpAddress=Не удалось определить Ваш IP-адрес для удаленного подключения.
-SystemTrayRdpIp.YourRemoteIpAddress=Ваш IP-адрес для удаленного подключения:
+Ups=Упс
+SystemTrayIsNotSupported=Системная область не поддерживается.
+Exit=Выход
+Yes=Да
+No=Нет
+AreYouSureToExit=Вы действительно хотите выйти?
+LeftClickMouseToDetermineYourIpAddress=Щелкните левой кнопкой мыши для отображения удаленного IP-адреса.
+TrayIconCouldNotBeAdded=Значок в системную область не может быть добавлен.
+YourRemoteIpAddressIsDefiningNowTryAgainLater=Ваш удаленный IP-адрес сейчас в процессе определения. Попробуйте еще раз позже.
+FailedToDetermineYourRemoteIpAddress=Не удалось определить Ваш удаленный IP-адрес.
+YourRemoteIpAddress=Ваш удаленный IP-адрес
