--- a/src/com/zhurylomihaylo/www/SystemTrayRdpIp/messages_ukorig.properties
+++ b/src/com/zhurylomihaylo/www/SystemTrayRdpIp/messages_ukorig.properties
@@ -1,11 +1,11 @@
-SystemTrayIP.AreYouSureToExit=Ви дійсно бажаєте вийти?
-SystemTrayIP.Exit=Вихід
-SystemTrayIP.LeftClickMouseToDetermineYourIPAddress=Натисніть лівою кнопкою мишки для визначення Вашої IP-адреси
-SystemTrayIP.No=Ні
-SystemTrayIP.SystemTrayIsNotSupported=Системна область не підтримується.
-SystemTrayIP.TrayIconCouldNotBeAdded=Значок не може бути додано в системну область.
-SystemTrayIP.Ups=Ой...
-SystemTrayIP.Yes=Так
-SystemTrayRdpIp.AddressIsDefining=Ваша IP-адреса для віддаленого підключення зараз в процесі визначення. Спробуйте знову пізніше.
-SystemTrayRdpIp.UnableToDetermineYourRemoteIpAddress=Не вдалося визначити Вашу IP-адресу для віддаленого підключення.
-SystemTrayRdpIp.YourRemoteIpAddress=Ваша IP-адреса для віддаленого підключення:
+Ups=Упс
+SystemTrayIsNotSupported=Системна область не підтримується.
+Exit=Вихід
+Yes=Так
+No=Ні
+AreYouSureToExit=Вы дійсно хочете вийти?
+LeftClickMouseToDetermineYourIpAddress=Клацніть лівою кнопкою мишки для відображення віддаленої IP-адреси.
+TrayIconCouldNotBeAdded=Значок в системну область не може бути додано.
+YourRemoteIpAddressIsDefiningNowTryAgainLater=Ваша віддалена IP-адреса зараз в процесі визначення. Спробуйте ще раз пізніше.
+FailedToDetermineYourRemoteIpAddress=Не вдалось визначити Вашу віддалену IP-адресу.
+YourRemoteIpAddress=Ваша віддалена IP-адреса
